--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.9.20",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "react": "^16.13.1",
     "react-circle-slider": "^1.6.2",
     "react-dom": "^16.13.1",
