--- a/package.json
+++ b/package.json
@@ -2,32 +2,29 @@
   "name": "stationmaster",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "dependencies": {
-    "@fseehawer/react-circular-slider": "^2.2.4",
+    "@hapi/joi": "^17.1.1",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "concurrently": "^5.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
-    "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0",
-    "passport-jwt": "^4.0.0",
     "react": "^16.13.1",
-    "react-circle-slider": "^1.6.2",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"cd server && node server.js\" \"npm start\""
+    "dev": "concurrently \"nodemon server.js\" \"npm start\""
   },
   "eslintConfig": {
     "extends": "react-app"
