--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "concurrently": "^5.2.0",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gsap": "^3.3.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "react": "^16.13.1",
@@ -42,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
   }
 }
