--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stationmaster",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@reach/router": "^1.3.4",
