--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
-  "homepage":"./",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@reach/router": "^1.3.4",
@@ -18,7 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "node server.js",
