--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "node server.js",
+    "react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"nodemon server.js\" \"npm start\""
+    "dev": "concurrently \"nodemon server.js\" \"npm run react\""
   },
   "eslintConfig": {
     "extends": "react-app"
