--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
   "devDependencies": {
     "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.4",
-    "webpack": "^4.43.0"
+    "nodemon": "^2.0.4"
   }
 }
