--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
+  "port": "3000",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@reach/router": "^1.3.4",
