--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "lunar",
+  "name": "workstation",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
   "port": "3000",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -19,15 +18,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "react": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"nodemon server.js\" \"npm run react\""
+    "dev": "concurrently \"nodemon server.js\" \"npm start\""
   },
   "eslintConfig": {
     "extends": "react-app"
