Add React DnD library

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "dotenv": "^8.2.0",
     "gsap": "^3.3.4",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
